objects/Sales_Invoice_Line__c/Sales_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice Line</label>
    <nameField>
        <displayFormat>SIL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>