objects/Sales_Invoice_Line__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <formula>text(Sales_Invoice_Job_Task__r.Billing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>