objects/Sales_Invoice_Line__c/fields/Billing_Worksheet_Line__c.field-meta.xml
<CustomField>
    <fullName>Billing_Worksheet_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Worksheet Line</label>
    <referenceTo>Billing_Worksheet_Line__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines (Billing Worksheet Line)</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>