objects/Sales_Invoice_Line__c/fields/BOL_Manifest__c.field-meta.xml
<CustomField>
    <fullName>BOL_Manifest__c</fullName>
    <label>BOL Manifest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>