objects/Sales_Invoice_Line__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line</label>
    <referenceTo>Contract_Line__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>