objects/Sales_Invoice_Line__c/fields/Cost_Qty__c.field-meta.xml
<CustomField>
    <fullName>Cost_Qty__c</fullName>
    <label>Cost Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>