objects/Sales_Invoice_Line__c/fields/Cost_UOM__c.field-meta.xml
<CustomField>
    <fullName>Cost_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost UOM</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines (Cost UOM)</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>