objects/Sales_Invoice_Line__c/fields/Current_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Invoice_Date__c</fullName>
    <label>Current Invoice Date</label>
    <type>Date</type>
</CustomField>