objects/Sales_Invoice_Line__c/fields/Disposal_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Billing_Method__c</fullName>
    <label>Disposal Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>