objects/Sales_Invoice_Line__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>