objects/Sales_Invoice_Line__c/fields/First_Lump_Sum_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Lump_Sum_Date__c</fullName>
    <label>First Lump Sum Date</label>
    <type>Date</type>
</CustomField>