objects/Sales_Invoice_Line__c/fields/Inter_Company_Resource__c.field-meta.xml
<CustomField>
    <fullName>Inter_Company_Resource__c</fullName>
    <formula>AND(ISNULL(Service_Center__c) == FALSE,AND(Service_Center__c != Sales_Invoice__r.Service_Center__c,Service_Center__r.Temporary__c != TRUE))</formula>
    <label>Inter Company Resource</label>
    <type>Checkbox</type>
</CustomField>