objects/Sales_Invoice_Line__c/fields/Is_Unit_Cost_Equals_to_TM_Line_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Is_Unit_Cost_Equals_to_TM_Line_Unit_Cost__c</fullName>
    <formula>Unit_Cost__c =  TM_Line_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Unit Cost Equals to TM Line Unit Cost</label>
    <type>Checkbox</type>
</CustomField>