objects/Sales_Invoice_Line__c/fields/Labor_Name__c.field-meta.xml
<CustomField>
    <fullName>Labor_Name__c</fullName>
    <formula>TM_Line__r.Resource_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Name</label>
    <type>Text</type>
</CustomField>