objects/Sales_Invoice_Line__c/fields/Last_Lump_Sum_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lump_Sum_Date__c</fullName>
    <label>Last Lump Sum Date</label>
    <type>Date</type>
</CustomField>