objects/Sales_Invoice_Line__c/fields/Line_Amt_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Amt_Incl_Tax__c</fullName>
    <label>Line Amt Incl. Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>