objects/Sales_Invoice_Line__c/fields/Line_Updated_by_Worksheet__c.field-meta.xml
<CustomField>
    <fullName>Line_Updated_by_Worksheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Updated by Worksheet</label>
    <type>Checkbox</type>
</CustomField>