objects/Sales_Invoice_Line__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <formula>IF( 
CONTAINS(Resource_Type__r.Unit_of_Measure__c, (  Unit_of_Measure__c )), 
"TRUE", 
"FALSE" 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match</label>
    <type>Text</type>
</CustomField>