objects/Sales_Invoice_Line__c/fields/Price_Match__c.field-meta.xml
<CustomField>
    <fullName>Price_Match__c</fullName>
    <formula>Resource_Type__r.Silver_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>