objects/Sales_Invoice_Line__c/fields/Print_Line__c.field-meta.xml
<CustomField>
    <fullName>Print_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Line</label>
    <type>Checkbox</type>
</CustomField>