objects/Sales_Invoice_Line__c/fields/Qty_to_Display__c.field-meta.xml
<CustomField>
    <fullName>Qty_to_Display__c</fullName>
    <formula>TEXT(Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty. to Display</label>
    <type>Text</type>
</CustomField>