objects/Sales_Invoice_Line__c/fields/Record_Updated__c.field-meta.xml
<CustomField>
    <fullName>Record_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Updated</label>
    <type>Checkbox</type>
</CustomField>