objects/Sales_Invoice_Line__c/fields/Recorded_Qty__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Qty__c</fullName>
    <label>Recorded Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>