objects/Sales_Invoice_Line__c/fields/Rental_Order__c.field-meta.xml
<CustomField>
    <fullName>Rental_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Order</label>
    <referenceTo>Rental_Order__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>