objects/Sales_Invoice_Line__c/fields/Resource_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Resource_Class_Code__c</fullName>
    <label>Resource Class Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>