objects/Sales_Invoice_Line__c/fields/Resource_LEM__c.field-meta.xml
<CustomField>
    <fullName>Resource_LEM__c</fullName>
    <formula>Resource__r.LEM_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource LEM</label>
    <type>Checkbox</type>
</CustomField>