objects/Sales_Invoice_Line__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>