objects/Sales_Invoice_Line__c/fields/Resource_UOM__c.field-meta.xml
<CustomField>
    <fullName>Resource_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Unit of Measure</label>
    <referenceTo>ResourceUOMAssociation__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>