objects/Sales_Invoice_Line__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <label>Sales Invoice</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Billing Package Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>