objects/Sales_Invoice_Line__c/fields/Sales_Invoice_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Job_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice Job Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Invoice__c</field>
            <operation>equals</operation>
            <valueField>Sales_Invoice_Job_Task__c.Sales_Invoice__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Invoice_Job_Task__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>