objects/Sales_Invoice_Line__c/fields/Same__c.field-meta.xml
<CustomField>
    <fullName>Same__c</fullName>
    <formula>Unit_Price__c &gt; Line_Amount__c &amp;&amp; Text(Category__c) == 'Labor' &amp;&amp; Line_Amount__c &gt; 0 &amp;&amp; Unit_of_Measure__r.Name = 'DAY' &amp;&amp; Quantity__c &gt;=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same</label>
    <type>Checkbox</type>
</CustomField>