objects/Sales_Invoice_Line__c/fields/SI_T_M_Line_Profits__c.field-meta.xml
<CustomField>
    <fullName>SI_T_M_Line_Profits__c</fullName>
    <formula>TM_Line__r.T_M_Line_Profit_Prct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SI T&amp;M Line Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>