objects/Sales_Invoice_Line__c/fields/Tax_Reverse_Line__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reverse_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Reverse Line</label>
    <type>Checkbox</type>
</CustomField>