objects/Sales_Invoice_Line__c/fields/Time_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Time_Rate_Code__c</fullName>
    <label>Time Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeRateCode</valueSetName>
    </valueSet>
</CustomField>