objects/Sales_Invoice_Line__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>