objects/Sales_Invoice_Line__c/fields/TM_Line__c.field-meta.xml
<CustomField>
    <fullName>TM_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>