objects/Sales_Invoice_Line__c/fields/TM_Line_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>TM_Line_Unit_Cost__c</fullName>
    <formula>Billing_Worksheet_Line__r.Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Line Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>