objects/Sales_Invoice_Line__c/fields/Unit_Cost_05132019__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_05132019__c</fullName>
    <label>Unit Cost 05132019</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>