objects/Sales_Invoice_Line__c/fields/Unit_Cost_Backup_121318__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Backup_121318__c</fullName>
    <label>Unit Cost (Backup 121318)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>