objects/Sales_Invoice_Line__c/fields/Unit_Cost_Updated__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Cost Updated</label>
    <type>Checkbox</type>
</CustomField>