objects/Sales_Invoice_Line__c/fields/Unit_Weight_Vol__c.field-meta.xml
<CustomField>
    <fullName>Unit_Weight_Vol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Wt./Vol</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit_of_Measure__c.Weight_Volume__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Sales Invoice Lines (Unit Wt./Vol)</relationshipLabel>
    <relationshipName>Sales_Invoice_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>