objects/Sales_Invoice_Line__c/fields/UnitCostSameAsUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitCostSameAsUnitPrice__c</fullName>
    <formula>Unit_Cost__c ==  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnitCostSameAsUnitPrice</label>
    <type>Checkbox</type>
</CustomField>