objects/Sales_Invoice_Line__c/fields/UOM_Exists__c.field-meta.xml
<CustomField>
    <fullName>UOM_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UOM Exists</label>
    <type>Checkbox</type>
</CustomField>