objects/Sales_Invoice_Line__c/validationRules/Labor_Description_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Labor_Description_length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(ISPICKVAL( Category__c , "Labor")),
LEN(Description__c) &gt; 97
)</errorConditionFormula>
    <errorMessage>Description value for Labor line is too long (max length = 97). Please edit the Description and Save.</errorMessage>
</ValidationRule>