objects/Sales_Invoice_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Resource__c</columns>
    <columns>Resource_Type__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>UOM_Exists__c</columns>
    <columns>Unit_Cost_Updated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Cost_Updated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>